--- a/assets/css/styleContacts.css
+++ b/assets/css/styleContacts.css
@@ -1,6 +1,7 @@
 
 /* Начальные стили */
 body {
+    font-family: 'icomoon';
     min-width: 300px;
     background: url('../img/bumaga-myataya-fon.jpg') 0% 0%/ 100% 100% no-repeat;
     background-attachment: fixed;
