--- a/assets/css/styleProduction.css
+++ b/assets/css/styleProduction.css
@@ -1,5 +1,6 @@
 /* Начальные стили */
 body {
+    font-family: 'icomoon';
     min-width: 300px;
     background: url('../img/bumaga-myataya-fon.jpg') 0% 0%/ 100% 100% no-repeat;
     background-attachment: fixed;
