--- a/src/assets/css/InfoHeader.css
+++ b/src/assets/css/InfoHeader.css
@@ -1,33 +1,58 @@
-.info-header-block{
+.info-header-block {
     width: 100%;
     height: 75%;
     background: rgba(188, 213, 254, 0.5);
 }
 
-.info-header-block .logo-block img{
+.info-header-block .logo-block img {
     height: 100%;
     width: 250px;
 }
 
-.title-block h3{
+.title-block h3 {
     font-size: 20px;
     font-weight: bold;
+    text-align: center;
+    margin: 10px 0px 10px 0px;
 }
 
-.contacts-block{
+.contacts-block {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px 0px 10px 0px;
 }
 
-.contacts-block_phones{
+.contacts-block_phones {
     display: flex;
     flex-direction: column;
 }
 
-.contacts-block_address{
+.contacts-block_address {
     display: flex;
     flex-direction: column;
 }
 
-.contacts-block a{
-    padding: 10px 0px 0px 50px;
+@media screen and (max-width:540px) {
+    .contacts-block_address {
+        text-align: center;
+    }
+}
+
+.fa {
+    padding-right: 5px;
+}
+
+.contacts-block a {
+    padding: 10px 20px 10px 20px;
+    transition: .5s all;
+    font-size: 16px;
+}
+
+.contacts-block a:hover{
+    color: #777;
+}
+
+.contacts-block a:active{
+    transform: scale(1.1);
 }
