--- a/src/assets/css/Menu.css
+++ b/src/assets/css/Menu.css
@@ -1,5 +1,25 @@
-.menu-block{
+.menu-block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 50px;
+    height: auto;
     background: rgb(15, 82, 90);
+}
+
+.menu-block a {
+    display: block;
+    font-size: 16px;
+    color: #fff;
+    margin: 10px 50px 10px 50px;
+    transition: .5s all;
+}
+
+.menu-block a:hover {
+    color: #777;
+}
+
+.menu-block a:active {
+    transform: scale(1.3);
 }
