--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -49,6 +49,11 @@ footer {
     padding: 10px 10px 10px 10px;
 }
 
+.disable-href-footer{
+    pointer-events: none;
+    text-decoration: underline;
+}
+
 .footer-content_contacts {
     padding: 10px 10px 10px 10px;
 }
