--- a/src/assets/css/Menu.css
+++ b/src/assets/css/Menu.css
@@ -1,18 +1,50 @@
 .menu-block {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: auto;
     background: rgb(15, 82, 90);
+}
+
+.menu-block_items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-block_alit-button {
+    display: flex;
+    justify-content: end;
+    width: 80%;
+    padding-top: 0px;
+}
+
+.menu-block button {
+    display: none;
+    width: 50px;
+    font-size: 20px;
+    text-align: center;
+    background: none;
+    padding: 5px 5px 5px 5px;
+    border: 2px solid black;
+    transition: .5s all;
+}
+
+.menu-block button:hover {
+    background: #fff;
+}
+
+.menu-block button:active {
+    transform: scale(1.1);
 }
 
 .menu-block a {
     display: block;
     font-size: 16px;
     color: #fff;
-    margin: 10px 50px 10px 50px;
+    margin: 0px 50px 0px 50px;
     transition: .5s all;
 }
 
@@ -22,4 +54,42 @@
 
 .menu-block a:active {
     transform: scale(1.3);
+}
+
+.disable-href-beginner {
+    pointer-events: none;
+    padding: 15px 15px 15px 15px;
+    background: #fff;
+    color: #000;
+    border: 2px solid #000;
+}
+
+.disable-href-beginner:visited{
+    color: #000;
+}
+
+@media screen and (max-width:867px) {
+    .menu-block_alit-button {
+        padding: 20px 0px 20px 0px;
+    }
+
+    .menu-block button {
+        display: block;
+    }
+
+    .menu-block_items {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .menu-block a {
+        margin: 20px 0px 20px 0px;
+    }
+
+    .disable-href-beginner {
+        width: 100%;
+        text-align: center;
+    }
+
 }
