--- a/src/assets/css/MainContent.css
+++ b/src/assets/css/MainContent.css
@@ -1,6 +1,5 @@
 .main-content{
     width: 100%;
-    height: 100vh;
-    text-align: center;
     padding-top: 20px;
+    padding: 50px 20% 0px 20%;
 }
