--- a/src/assets/css/ContactPage.css
+++ b/src/assets/css/ContactPage.css
@@ -1,61 +1,69 @@
-.contact-page-block{
+/* Общие стили */
+.contact-page-block {
     font-family: 'Concrete';
     text-align: left;
     height: auto;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'BerlinType';
     font-weight: bold;
 }
 
-h1{
+h1 {
     font-size: 30px;
 }
 
-h2{
+h2 {
     font-size: 25px;
     margin: 20px 0px 20px 0px;
 }
 
-.contact-page-block_text{
+
+/* Стили для текста */
+.contact-page-block_text {
     text-align: justify;
     width: 100%;
     height: auto;
 }
 
-.contact-page-block_text span{
+.contact-page-block_text span {
     display: block;
     padding: 10px 0px 10px 0px;
 }
 
-.contact-page-block_text span a{
+.contact-page-block_text span a {
     display: block;
     padding: 10px 0px 10px 0px;
     transition: .5s all;
 }
 
-.contact-page-block_text span a::before{
+.contact-page-block_text span a::before {
     content: '\a00\a00';
 }
 
-.contact-page-block_text span a:hover{
+.contact-page-block_text span a:hover {
     color: #666;
 }
 
-
-.contact-page-block_form{
+/* Стили для формы */
+.contact-page-block_form {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: auto;
 }
 
-.contact-page-block_form h2{
+.contact-page-block_form h2 {
     text-align: center;
 }
 
-.contact-page-block_form form{
+.contact-page-block_form form {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -64,42 +72,45 @@ h2{
     padding-bottom: 30px;
 }
 
-.contact-page-block_form_row{
+.contact-page-block_form_row {
     display: flex;
     flex-direction: column;
-    width: 350px;
+    width: 90%;
     padding: 10px 10px 10px 10px;
 }
 
-.contact-page-block_form_row input{
-    height: 30px;
+.contact-page-block_form_row label {
+    font-size: 18px;
+}
+
+.contact-page-block_form_row input {
     background: rgba(65, 159, 173, 0.5);
     border: 2px solid black;
-    padding: 5px 5px 5px 5px;
+    padding: 15px 15px;
     margin-top: 5px;
-    font-size: 12px;
+    font-size: 18px;
     transition: .5s all;
 }
 
-.contact-page-block_form_row input:focus{
+.contact-page-block_form_row input:focus {
     border: 3px solid #5DA3AD;
 }
 
-.contact-page-block_form_row textarea{
+.contact-page-block_form_row textarea {
     background: rgba(65, 159, 173, 0.5);
     width: 100%;
-    height: 50px;
-    padding: 5px 5px 5px 5px;
+    height: 150px;
+    padding: 15px 15px;
     border: 2px solid black;
-    font-size: 12px;
+    font-size: 18px;
     transition: .5s all;
 }
 
-.contact-page-block_form_row textarea:focus{
+.contact-page-block_form_row textarea:focus {
     border: 3px solid #5DA3AD;
 }
 
-.contact-page-block_form_row .submit-button{
+.contact-page-block_form_row .submit-button {
     border: 2px solid black;
     width: auto;
     height: auto;
@@ -108,12 +119,49 @@ h2{
     transition: .5s all;
 }
 
-.contact-page-block_form_row .submit-button:hover{
+.contact-page-block_form_row .submit-button:hover {
     cursor: pointer;
     background: #000;
     color: #FFF;
 }
 
-.contact-page-block_form_row .submit-button:active{
+.contact-page-block_form_row .submit-button:active {
     transform: scale(1.1);
+}
+
+@media screen and (max-width:991px) {
+
+    .contact-page-block_form_row label {
+        font-size: 14px;
+    }
+
+    .contact-page-block_form_row input {
+        padding: 10px 10px;
+        font-size: 14px;
+    }
+
+    .contact-page-block_form_row textarea {
+        height: 100px;
+        padding: 5px 5px;
+        font-size: 14px;
+    }
+}
+
+
+@media screen and (max-width:450px) {
+
+    .contact-page-block_form_row label {
+        font-size: 12px;
+    }
+
+    .contact-page-block_form_row input {
+        padding: 5px 5px;
+        font-size: 12px;
+    }
+
+    .contact-page-block_form_row textarea {
+        height: 100px;
+        padding: 5px 5px;
+        font-size: 12px;
+    }
 }
