--- a/src/assets/css/InfoHeader.css
+++ b/src/assets/css/InfoHeader.css
@@ -1,7 +1,7 @@
 .info-header-block {
     width: 100%;
     height: 75%;
-    background: rgba(65, 159, 173, 0.5);
+    /* background: rgba(65, 159, 173, 0.5); */
 }
 
 .info-header-block .logo-block img {
