--- a/src/assets/css/modalNotification.css
+++ b/src/assets/css/modalNotification.css
@@ -1,8 +1,40 @@
-.body-modal-notification{
-    background: rgba(0,0,0,0.5);
+.body-modal-notification {
+    background: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+}
+
+.modal-notification {
+    display: flex;
+    align-items:flex-end;
+    flex-direction: column;
+    position: fixed;
+    top: 50%;
+    left: 25%;
+    width: 50%;
+    height: 15%;
+    background: #fff;
+    border: 5px solid white;
+}
+
+.modal-notification_content{
+    width: 100%;
+    height: auto;
+}
+
+.modal-notification h1{
+    font-size: 30px;
+    text-align: center;
+}
+
+.modal-notification span{
+    display: block;
+    padding: 10px 10px;
+}
+
+.modal-notification button{
+    font-size: 20px;
 }
