--- a/src/assets/css/modalNotification.css
+++ b/src/assets/css/modalNotification.css
@@ -9,32 +9,46 @@
 
 .modal-notification {
     display: flex;
-    align-items:flex-end;
+    align-items: flex-end;
     flex-direction: column;
     position: fixed;
     top: 50%;
-    left: 25%;
-    width: 50%;
-    height: 15%;
+    left: 35%;
+    width: 30%;
+    height: auto;
     background: #fff;
-    border: 5px solid white;
+    border: 15px solid white;
 }
 
-.modal-notification_content{
+.modal-notification_content {
     width: 100%;
     height: auto;
 }
 
-.modal-notification h1{
+.modal-notification h1 {
     font-size: 30px;
     text-align: center;
 }
 
-.modal-notification span{
+.modal-notification span {
     display: block;
     padding: 10px 10px;
 }
 
-.modal-notification button{
+.modal-notification button {
     font-size: 20px;
+}
+
+@media screen and (max-width:500px) {
+    .modal-notification {
+        width: 170px;
+        left: 30%;
+    }
+}
+
+@media screen and (max-width:300px) {
+    .modal-notification {
+        width: 170px;
+        left: 25%;
+    }
 }
